test/errors/setpc1.input.asm

* = $801

    lda #0
    nop
    nop
    nop
    nop

* = $805

    lda #1
